--- a/app/src/main/res/layout/adapter_anime_list_grid.xml
+++ b/app/src/main/res/layout/adapter_anime_list_grid.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingPrefix"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,18 +10,29 @@
 
     <ImageView
         android:id="@+id/thumbnail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:src="@drawable/thumbnail_placeholder" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:padding="10dp"
+        android:background="@drawable/list_selector">
 
+        <TextView
+            android:id="@+id/title"
+            android:gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="2"
+            android:textColor="@color/anime_item_text_color"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="2"
+            fontPath="fonts/Lato-Bold.ttf" />
+    </RelativeLayout>
 </LinearLayout>
