--- a/app/src/main/res/layout/fragment_anime_list.xml
+++ b/app/src/main/res/layout/fragment_anime_list.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="15dp" />
+        android:layout_height="match_parent" />
 
-</LinearLayout>
+    <com.futuremind.recyclerviewfastscroll.FastScroller
+        android:id="@+id/fastScroll"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        app:fastscroll__handleColor="@color/colorPrimary"/>
+
+</RelativeLayout>
